name:                DMatrix
version:             0.1.0.0
synopsis:            Converts a data frame into a DMatrix
license:             MIT
license-file:        LICENSE
author:              Peter Hurford
maintainer:          peter@peterhurford.com
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:         -Wall
  exposed-modules:     DMatrix
  build-depends:       base >=4.7 && <4.8, MissingH
  hs-source-dirs:      src
  default-language:    Haskell2010

executable iris
  main-is: iris.hs
  ghc-options:         -rtsopts -O2
  build-depends:       base, csv >= 0.1.2, DMatrix, MissingH
  hs-source-dirs:      demo
  default-language:    Haskell2010
